# webcmp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_test.cpp  webcmp_tools.cpp  webcmp_tools.h
docs/: dendron.yml
docs/notes/: Kanban.md  Note.md  libcurl.md  root.md
